--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -5,26 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Employee</title>
-      <link rel="stylesheet" type="text/css" href="css/index.css">
+      <link rel="stylesheet" type="text/css" href="css/indexx.css">
 </head>
 <body>
     {{>navbar}}
    <style>
+   
    body{
-    background-color: rgb(115, 210, 210);
-   }
+
+   
+      background-image: url("Images/imag.jpeg");
+ font-style: italic;
+  
+}
    h1{text-align: center;}
-   h5{text-decoration: underline overline dotted red;}
+ 
    </style>
 
-
+  
   <br>
 
 
-
+<div class="hero">
     <h1>Welcome to my Page!</h1>
-    <p>&nbsp;This page is about Employee Registration and Employee Login:</p>
-    <p>&nbsp;1.Go to Regitration page if you don't have an Account?</p>
-    <p>&nbsp;2.Go to Login Page if you Already have an Account.</p>
+    <p>&nbsp;&nbsp;This page is about Employee Registration and Employee Login:</p>
+    <p>&nbsp;&nbsp;1.Go to Regitration page if you don't have an Account?</p>
+    <p>&nbsp;&nbsp;2.Go to Login Page if you Already have an Account.</p></div>
 </body>
 </html>
