--- a/templates/views/register.hbs
+++ b/templates/views/register.hbs
@@ -19,50 +19,50 @@
             <div class="card-box">
                 <span class="details"></span>
         <input type="text" class="form-control" placeholder="First Name *" value=""
-        name="firstname"/>
+        name="firstname"/ required>
     </div>
    
    <div class="card-box">
                 <span class="details"></span>
         <input type="password" class="form-control" placeholder="password *" value=""
-        name="password"/>
+        name="password"/ required>
     </div>
 
 
     <div class="card-box">
                 <span class="details"></span>
         <input type="text" class="form-control" placeholder="Last Name *" value=""
-        name="lastname"/>
+        name="lastname"/ required>
      </div>
      
     <div class="card-box">
                 <span class="details"></span>
         <input type="password" class="form-control" placeholder="Confirm password *" value=""
-        name="confirmpassword"/>
+        name="confirmpassword"/required>
 </div>
       
    <div class="card-box">
                 <span class="details"></span>
         <input type="text" class="form-control" placeholder="Your Email *" value=""
-        name="email"/>
+        name="email"/required>
    </div>
    <div class="card-box">
                 <span class="details"></span>
         <input type="text" minlength="10" maxlength="10"
         class="form-control" placeholder="Your Phone *" value=""
-        name="phone"/>
+        name="phone"/required>
    </div>
        
    <div class="card-box">
 <span class="details"></span>
 <input type="text" placeholder="Enter Security Question *" 
-value=""name="security"/>
+value=""name="security"/required>
 </div> 
 
 <div class="card-box">
 <span class="details"></span>
 <input type="text" class="form-control" placeholder="Enter your Answer *" value=""
-name="Answer"/></div>
+name="Answer"/required></div>
 </div>
 
 
