--- a/templates/views/register.hbs
+++ b/templates/views/register.hbs
@@ -55,7 +55,7 @@
        
    <div class="card-box">
 <span class="details"></span>
-<input type="text" placeholder="Enter Security Question *" 
+<input type="text" placeholder="Enter your own Question *" 
 value=""name="security"/required>
 </div> 
 
