--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -29,7 +29,7 @@
 <div class="hero">
     <h1>Welcome to my Page!</h1>
     <p>&nbsp;&nbsp;This page is about Employee Registration and Employee Login:</p>
-    <p>&nbsp;&nbsp;1.Go to Regitration page if you don't have an Account?</p>
+    <p>&nbsp;&nbsp;1.Go to Registration</a> page if you don't have an Account?</p>
     <p>&nbsp;&nbsp;2.Go to Login Page if you Already have an Account.</p></div>
 </body>
 </html>
